[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Music_Selector.gd" type="Script" id=1]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -2880, 0 )
b = Vector2( 2880, 0 )

[node name="Music_Selector" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Anger" type="Area2D" parent="."]
position = Vector2( 0, 2170 )
collision_layer = 16
collision_mask = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anger"]
shape = SubResource( 1 )

[node name="Bargain" type="Area2D" parent="."]
position = Vector2( 0, 5400 )
collision_layer = 16
collision_mask = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bargain"]
shape = SubResource( 1 )

[node name="Depression" type="Area2D" parent="."]
position = Vector2( 0, 8720 )
collision_layer = 16
collision_mask = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Depression"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Anger" to="." method="_on_Anger_body_entered"]
[connection signal="body_entered" from="Bargain" to="." method="_on_Bargain_body_entered"]
[connection signal="body_entered" from="Depression" to="." method="_on_Depression_body_entered"]
